BACK - Update swagger
Swagger + routes
