# back/src/bdd/Account/routes/accountRouter.js
@@ -1,7 +1,13 @@
 var express = require('express');
 var login = require('../components/login');
 var register = require('../components/register');
+var getAccounts = require('../components/getAccounts');
 var router = express.Router();
+
+/* GET account. */
+router.get('/', async function (req, res, next) {
+  res.send(await getAccounts.getAccounts(req.body));
+});
 
 /* POST auth callback. */
 router.post('/login', async function (req, res, next) {
